Webcam/codeblock_jpg/header/jpeglib.h

#define NUM_QUANT_TBLS      4   
#define NUM_HUFF_TBLS       4   
#define NUM_ARITH_TBLS      16  
#define MAX_COMPS_IN_SCAN   4   
#define D_MAX_BLOCKS_IN_MCU   10 
typedef JSAMPROW *JSAMPARRAY;   
typedef JSAMPARRAY *JSAMPIMAGE; 
typedef struct {
  UINT16 quantval[DCTSIZE2];    
  boolean sent_table;           
} JQUANT_TBL;
typedef struct {
  UINT8 bits[17];               
  UINT8 huffval[256];           
  boolean sent_table;           
} JHUFF_TBL;
typedef enum {
  JCS_UNKNOWN,            
  JCS_GRAYSCALE,          
  JCS_RGB,                
  JCS_YCbCr,              
  JCS_CMYK,               
  JCS_YCCK,               
  JCS_EXT_RGB,            
  JCS_EXT_RGBX,           
  JCS_EXT_BGR,            
  JCS_EXT_BGRX,           
  JCS_EXT_XBGR,           
  JCS_EXT_XRGB,           
  JCS_EXT_RGBA,           
  JCS_EXT_BGRA,           
  JCS_EXT_ABGR,           
  JCS_EXT_ARGB,           
  JCS_RGB565              
} J_COLOR_SPACE;
typedef struct jpeg_common_struct *j_common_ptr;
typedef struct jpeg_compress_struct *j_compress_ptr;
typedef struct jpeg_decompress_struct *j_decompress_ptr;
struct jpeg_error_mgr {
  void (*error_exit) (j_common_ptr cinfo);
  void (*emit_message) (j_common_ptr cinfo, int msg_level);
  void (*output_message) (j_common_ptr cinfo);
  void (*format_message) (j_common_ptr cinfo, char *buffer);
  void (*reset_error_mgr) (j_common_ptr cinfo);
  int msg_code;
  union {
    int i[8];
    char s[JMSG_STR_PARM_MAX];
  } msg_parm;
  int trace_level;              
  long num_warnings;            
  const char * const *jpeg_message_table; 
  int last_jpeg_message;    
  const char * const *addon_message_table; 
  int first_addon_message;      
  int last_addon_message;       
};
#define JPOOL_PERMANENT  0      
#define JPOOL_IMAGE      1      
#define JPOOL_NUMPOOLS   2
typedef struct jvirt_barray_control *jvirt_barray_ptr;
typedef boolean (*jpeg_marker_parser_method) (j_decompress_ptr cinfo);
#define JPP(arglist)    arglist
extern struct jpeg_error_mgr * jpeg_std_error(struct jpeg_error_mgr *err);
extern void jpeg_CreateCompress(j_compress_ptr cinfo, int version,
                                 size_t structsize);
extern void jpeg_CreateDecompress(j_decompress_ptr cinfo, int version,
                                   size_t structsize);
extern void jpeg_destroy_compress(j_compress_ptr cinfo);
extern void jpeg_destroy_decompress(j_decompress_ptr cinfo);
extern void jpeg_stdio_dest(j_compress_ptr cinfo, FILE *outfile);
extern void jpeg_stdio_src(j_decompress_ptr cinfo, FILE *infile);
extern void jpeg_mem_dest(j_compress_ptr cinfo, unsigned char **outbuffer,
                           unsigned long *outsize);
extern void jpeg_mem_src(j_decompress_ptr cinfo,
                          const unsigned char *inbuffer, unsigned long insize);
extern void jpeg_set_defaults(j_compress_ptr cinfo);
extern void jpeg_set_colorspace(j_compress_ptr cinfo,
                                 J_COLOR_SPACE colorspace);
extern void jpeg_default_colorspace(j_compress_ptr cinfo);
extern void jpeg_set_quality(j_compress_ptr cinfo, int quality,
                              boolean force_baseline);
extern void jpeg_set_linear_quality(j_compress_ptr cinfo, int scale_factor,
                                     boolean force_baseline);
extern void jpeg_default_qtables(j_compress_ptr cinfo,
                                  boolean force_baseline);
extern void jpeg_add_quant_table(j_compress_ptr cinfo, int which_tbl,
                                  const unsigned int *basic_table,
                                  int scale_factor, boolean force_baseline);
extern int jpeg_quality_scaling(int quality);
extern void jpeg_simple_progression(j_compress_ptr cinfo);
extern void jpeg_suppress_tables(j_compress_ptr cinfo, boolean suppress);
extern JQUANT_TBL * jpeg_alloc_quant_table(j_common_ptr cinfo);
extern JHUFF_TBL * jpeg_alloc_huff_table(j_common_ptr cinfo);
extern void jpeg_start_compress(j_compress_ptr cinfo,
                                 boolean write_all_tables);
extern JDIMENSION jpeg_write_scanlines(j_compress_ptr cinfo,
                                        JSAMPARRAY scanlines,
                                        JDIMENSION num_lines);
extern void jpeg_finish_compress(j_compress_ptr cinfo);
extern void jpeg_calc_jpeg_dimensions(j_compress_ptr cinfo);
extern JDIMENSION jpeg_write_raw_data(j_compress_ptr cinfo, JSAMPIMAGE data,
                                       JDIMENSION num_lines);
extern void jpeg_write_marker(j_compress_ptr cinfo, int marker,
                               const JOCTET *dataptr, unsigned int datalen);
extern void jpeg_write_m_header(j_compress_ptr cinfo, int marker,
                                 unsigned int datalen);
extern void jpeg_write_m_byte(j_compress_ptr cinfo, int val);
extern void jpeg_write_tables(j_compress_ptr cinfo);
extern void jpeg_write_icc_profile(j_compress_ptr cinfo,
                                    const JOCTET *icc_data_ptr,
                                    unsigned int icc_data_len);
extern int jpeg_read_header(j_decompress_ptr cinfo, boolean require_image);
#define JPEG_SUSPENDED           0 
#define JPEG_HEADER_OK           1 
#define JPEG_HEADER_TABLES_ONLY  2 
extern boolean jpeg_start_decompress(j_decompress_ptr cinfo);
extern JDIMENSION jpeg_read_scanlines(j_decompress_ptr cinfo,
                                       JSAMPARRAY scanlines,
                                       JDIMENSION max_lines);
extern JDIMENSION jpeg_skip_scanlines(j_decompress_ptr cinfo,
                                       JDIMENSION num_lines);
extern void jpeg_crop_scanline(j_decompress_ptr cinfo, JDIMENSION *xoffset,
                                JDIMENSION *width);
extern boolean jpeg_finish_decompress(j_decompress_ptr cinfo);
extern JDIMENSION jpeg_read_raw_data(j_decompress_ptr cinfo, JSAMPIMAGE data,
                                      JDIMENSION max_lines);
extern boolean jpeg_has_multiple_scans(j_decompress_ptr cinfo);
extern boolean jpeg_start_output(j_decompress_ptr cinfo, int scan_number);
extern boolean jpeg_finish_output(j_decompress_ptr cinfo);
extern boolean jpeg_input_complete(j_decompress_ptr cinfo);
extern void jpeg_new_colormap(j_decompress_ptr cinfo);
extern int jpeg_consume_input(j_decompress_ptr cinfo);
#define JPEG_REACHED_SOS        1 
#define JPEG_REACHED_EOI        2 
#define JPEG_ROW_COMPLETED      3 
#define JPEG_SCAN_COMPLETED     4 
extern void jpeg_core_output_dimensions(j_decompress_ptr cinfo);
extern void jpeg_calc_output_dimensions(j_decompress_ptr cinfo);
extern void jpeg_save_markers(j_decompress_ptr cinfo, int marker_code,
                               unsigned int length_limit);
extern void jpeg_set_marker_processor(j_decompress_ptr cinfo,
                                       int marker_code,
                                       jpeg_marker_parser_method routine);
extern jvirt_barray_ptr * jpeg_read_coefficients(j_decompress_ptr cinfo);
extern void jpeg_write_coefficients(j_compress_ptr cinfo,
                                     jvirt_barray_ptr *coef_arrays);
extern void jpeg_copy_critical_parameters(j_decompress_ptr srcinfo,
                                           j_compress_ptr dstinfo);
extern void jpeg_abort_compress(j_compress_ptr cinfo);
extern void jpeg_abort_decompress(j_decompress_ptr cinfo);
extern void jpeg_abort(j_common_ptr cinfo);
extern void jpeg_destroy(j_common_ptr cinfo);
extern boolean jpeg_resync_to_restart(j_decompress_ptr cinfo, int desired);
extern boolean jpeg_read_icc_profile(j_decompress_ptr cinfo,
                                      JOCTET **icc_data_ptr,
                                      unsigned int *icc_data_len);
#define JPEG_RST0       0xD0    
#define JPEG_EOI        0xD9    
#define JPEG_APP0       0xE0    
#define JPEG_COM        0xFE    