Webcam/X11_and_JPG/jpeglib.pas


  Tjpeg_decompress_struct = record
    err: Pjpeg_error_mgr;
    mem: Pjpeg_memory_mgr;
    progress: Pjpeg_progress_mgr;
    client_data: pointer;
    is_decompressor: Tboolean;
    global_state: longint;

    src: Pjpeg_source_mgr;
    image_width: TJDIMENSION;
    image_height: TJDIMENSION;
    num_components: longint;
    jpeg_color_space: TJ_COLOR_SPACE;
    out_color_space: TJ_COLOR_SPACE;
    scale_num: dword;
    scale_denom: dword;
    output_gamma: cdouble;
    buffered_image: Tboolean;
    raw_data_out: Tboolean;
    dct_method: TJ_DCT_METHOD;
    do_fancy_upsampling: Tboolean;
    do_block_smoothing: Tboolean;
    quantize_colors: Tboolean;
    dither_mode: TJ_DITHER_MODE;
    two_pass_quantize: Tboolean;
    desired_number_of_colors: longint;
    enable_1pass_quant: Tboolean;
    enable_external_quant: Tboolean;
    enable_2pass_quant: Tboolean;
    output_width: TJDIMENSION;
    output_height: TJDIMENSION;
    out_color_components: longint;
    output_components: longint;
    rec_outbuf_height: longint;
    actual_number_of_colors: longint;
    colormap: TJSAMPARRAY;
    output_scanline: TJDIMENSION;
    input_scan_number: longint;
    input_iMCU_row: TJDIMENSION;
    output_scan_number: longint;
    output_iMCU_row: TJDIMENSION;
    coef_bits: Pcoef_bits;
    quant_tbl_ptrs: array[0..(NUM_QUANT_TBLS) - 1] of PJQUANT_TBL;
    dc_huff_tbl_ptrs: array[0..(NUM_HUFF_TBLS) - 1] of PJHUFF_TBL;
    ac_huff_tbl_ptrs: array[0..(NUM_HUFF_TBLS) - 1] of PJHUFF_TBL;
    data_precision: longint;
    comp_info: Pjpeg_component_info;
    progressive_mode: Tboolean;
    arith_code: Tboolean;
    arith_dc_L: array[0..(NUM_ARITH_TBLS) - 1] of TUINT8;
    arith_dc_U: array[0..(NUM_ARITH_TBLS) - 1] of TUINT8;
    arith_ac_K: array[0..(NUM_ARITH_TBLS) - 1] of TUINT8;
    restart_interval: dword;
    saw_JFIF_marker: Tboolean;
    JFIF_major_version: TUINT8;
    JFIF_minor_version: TUINT8;
    density_unit: TUINT8;
    X_density: TUINT16;
    Y_density: TUINT16;
    saw_Adobe_marker: Tboolean;
    Adobe_transform: TUINT8;
    CCIR601_sampling: Tboolean;
    marker_list: Tjpeg_saved_marker_ptr;
    max_h_samp_factor: longint;
    max_v_samp_factor: longint;
    min_DCT_h_scaled_size: longint;
    min_DCT_v_scaled_size: longint;
    total_iMCU_rows: TJDIMENSION;
    sample_range_limit: PJSAMPLE;
    comps_in_scan: longint;
    cur_comp_info: array[0..(MAX_COMPS_IN_SCAN) - 1] of Pjpeg_component_info;
    MCUs_per_row: TJDIMENSION;
    MCU_rows_in_scan: TJDIMENSION;
    blocks_in_MCU: longint;
    MCU_membership: array[0..(D_MAX_BLOCKS_IN_MCU) - 1] of longint;
    Ss: longint;
    Se: longint;
    Ah: longint;
    Al: longint;
    block_size: longint;
    natural_order: Plongint;
    lim_Se: longint;
    unread_marker: longint;

    master: Pjpeg_decomp_master;
    main: Pjpeg_d_main_controller;
    coef: Pjpeg_d_coef_controller;
    post: Pjpeg_d_post_controller;
    inputctl: Pjpeg_input_controller;
    marker: Pjpeg_marker_reader;
    entropy: Pjpeg_entropy_decoder;
    idct: Pjpeg_inverse_dct;
    upsample: Pjpeg_upsampler;
    cconvert: Pjpeg_color_deconverter;
    cquantize: Pjpeg_color_quantizer;
  end;

const
  JPOOL_PERMANENT = 0;
  JPOOL_IMAGE = 1;
  JPOOL_NUMPOOLS = 2;

function JPP(arglist: longint): longint;

function jpeg_std_error(err: Pjpeg_error_mgr): Pjpeg_error_mgr; cdecl; external;

// --- neu
procedure jpeg_create_compress(cinfo: Tj_compress_ptr);
procedure jpeg_create_decompress(cinfo: Tj_decompress_ptr);
// ---

procedure jpeg_CreateCompress(cinfo: Tj_compress_ptr; version: longint; structsize: Tsize_t); cdecl; external;
procedure jpeg_CreateDecompress(cinfo: Tj_decompress_ptr; version: longint; structsize: Tsize_t); cdecl; external;
procedure jpeg_destroy_compress(cinfo: Tj_compress_ptr); cdecl; external;
procedure jpeg_destroy_decompress(cinfo: Tj_decompress_ptr); cdecl; external;
procedure jpeg_stdio_dest(cinfo: Tj_compress_ptr; outfile: PFILE); cdecl; external;
procedure jpeg_stdio_src(cinfo: Tj_decompress_ptr; infile: PFILE); cdecl; external;

procedure jpeg_mem_dest(cinfo: Tj_compress_ptr; outbuffer: PPbyte; outsize: Pdword); cdecl; external;
procedure jpeg_mem_src(cinfo: Tj_decompress_ptr; inbuffer: pbyte; insize: dword); cdecl; external;

procedure jpeg_set_defaults(cinfo: Tj_compress_ptr); cdecl; external;
procedure jpeg_set_colorspace(cinfo: Tj_compress_ptr; colorspace: TJ_COLOR_SPACE); cdecl; external;
procedure jpeg_default_colorspace(cinfo: Tj_compress_ptr); cdecl; external;
procedure jpeg_set_quality(cinfo: Tj_compress_ptr; quality: longint; force_baseline: Tboolean); cdecl; external;
procedure jpeg_set_linear_quality(cinfo: Tj_compress_ptr; scale_factor: longint; force_baseline: Tboolean); cdecl; external;

procedure jpeg_default_qtables(cinfo: Tj_compress_ptr; force_baseline: Tboolean); cdecl; external;

procedure jpeg_add_quant_table(cinfo: Tj_compress_ptr; which_tbl: longint; basic_table: Pdword; scale_factor: longint; force_baseline: Tboolean); cdecl; external;
function jpeg_quality_scaling(quality: longint): longint; cdecl; external;
procedure jpeg_simple_progression(cinfo: Tj_compress_ptr); cdecl; external;
procedure jpeg_suppress_tables(cinfo: Tj_compress_ptr; suppress: Tboolean); cdecl; external;
function jpeg_alloc_quant_table(cinfo: Tj_common_ptr): PJQUANT_TBL; cdecl; external;
function jpeg_alloc_huff_table(cinfo: Tj_common_ptr): PJHUFF_TBL; cdecl; external;
procedure jpeg_start_compress(cinfo: Tj_compress_ptr; write_all_tables: Tboolean); cdecl; external;
function jpeg_write_scanlines(cinfo: Tj_compress_ptr; scanlines: TJSAMPARRAY; num_lines: TJDIMENSION): TJDIMENSION; cdecl; external;
procedure jpeg_finish_compress(cinfo: Tj_compress_ptr); cdecl; external;
procedure jpeg_calc_jpeg_dimensions(cinfo: Tj_compress_ptr); cdecl; external;

function jpeg_write_raw_data(cinfo: Tj_compress_ptr; Data: TJSAMPIMAGE; num_lines: TJDIMENSION): TJDIMENSION; cdecl; external;
procedure jpeg_write_marker(cinfo: Tj_compress_ptr; marker: longint; dataptr: PJOCTET; datalen: dword); cdecl; external;
procedure jpeg_write_m_header(cinfo: Tj_compress_ptr; marker: longint; datalen: dword); cdecl; external;
procedure jpeg_write_m_byte(cinfo: Tj_compress_ptr; val: longint); cdecl; external;
procedure jpeg_write_tables(cinfo: Tj_compress_ptr); cdecl; external;
procedure jpeg_write_icc_profile(cinfo: Tj_compress_ptr; icc_data_ptr: PJOCTET; icc_data_len: dword); cdecl; external;
function jpeg_read_header(cinfo: Tj_decompress_ptr; require_image: Tboolean): longint; cdecl; external;
const
  JPEG_SUSPENDED = 0;
  JPEG_HEADER_OK = 1;
  JPEG_HEADER_TABLES_ONLY = 2;

function jpeg_start_decompress(cinfo: Tj_decompress_ptr): Tboolean; cdecl; external;
function jpeg_read_scanlines(cinfo: Tj_decompress_ptr; scanlines: TJSAMPARRAY; max_lines: TJDIMENSION): TJDIMENSION; cdecl; external;
function jpeg_skip_scanlines(cinfo: Tj_decompress_ptr; num_lines: TJDIMENSION): TJDIMENSION; cdecl; external;
procedure jpeg_crop_scanline(cinfo: Tj_decompress_ptr; xoffset: PJDIMENSION; Width: PJDIMENSION); cdecl; external;
function jpeg_finish_decompress(cinfo: Tj_decompress_ptr): Tboolean; cdecl; external;
function jpeg_read_raw_data(cinfo: Tj_decompress_ptr; Data: TJSAMPIMAGE; max_lines: TJDIMENSION): TJDIMENSION; cdecl; external;
function jpeg_has_multiple_scans(cinfo: Tj_decompress_ptr): Tboolean; cdecl; external;
function jpeg_start_output(cinfo: Tj_decompress_ptr; scan_number: longint): Tboolean; cdecl; external;
function jpeg_finish_output(cinfo: Tj_decompress_ptr): Tboolean; cdecl; external;
function jpeg_input_complete(cinfo: Tj_decompress_ptr): Tboolean; cdecl; external;
procedure jpeg_new_colormap(cinfo: Tj_decompress_ptr); cdecl; external;
function jpeg_consume_input(cinfo: Tj_decompress_ptr): longint; cdecl; external;
const
  JPEG_REACHED_SOS = 1;
  JPEG_REACHED_EOI = 2;
  JPEG_ROW_COMPLETED = 3;
  JPEG_SCAN_COMPLETED = 4;

procedure jpeg_core_output_dimensions(cinfo: Tj_decompress_ptr); cdecl; external;

procedure jpeg_calc_output_dimensions(cinfo: Tj_decompress_ptr); cdecl; external;
procedure jpeg_save_markers(cinfo: Tj_decompress_ptr; marker_code: longint; length_limit: dword); cdecl; external;
procedure jpeg_set_marker_processor(cinfo: Tj_decompress_ptr; marker_code: longint; routine: Tjpeg_marker_parser_method); cdecl; external;
function jpeg_read_coefficients(cinfo: Tj_decompress_ptr): Pjvirt_barray_ptr; cdecl; external;
procedure jpeg_write_coefficients(cinfo: Tj_compress_ptr; coef_arrays: Pjvirt_barray_ptr); cdecl; external;
procedure jpeg_copy_critical_parameters(srcinfo: Tj_decompress_ptr; dstinfo: Tj_compress_ptr); cdecl; external;
procedure jpeg_abort_compress(cinfo: Tj_compress_ptr); cdecl; external;
procedure jpeg_abort_decompress(cinfo: Tj_decompress_ptr); cdecl; external;
procedure jpeg_abort(cinfo: Tj_common_ptr); cdecl; external;
procedure jpeg_destroy(cinfo: Tj_common_ptr); cdecl; external;
function jpeg_resync_to_restart(cinfo: Tj_decompress_ptr; desired: longint): Tboolean; cdecl; external;
function jpeg_read_icc_profile(cinfo: Tj_decompress_ptr; icc_data_ptr: PPJOCTET; icc_data_len: Pdword): Tboolean; cdecl; external;
const
  JPEG_RST0 = $D0;
  JPEG_EOI = $D9;
  JPEG_APP0 = $E0;
  JPEG_COM = $FE;

implementation

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }
function JPP(arglist: longint): longint;
begin
  JPP := arglist;
end;

procedure jpeg_create_compress(cinfo: Tj_compress_ptr);
begin
  jpeg_CreateCompress(cinfo, JPEG_LIB_VERSION, SizeOf(Tjpeg_compress_struct));
end;

procedure jpeg_create_decompress(cinfo: Tj_decompress_ptr);
begin
  jpeg_CreateDecompress(cinfo, JPEG_LIB_VERSION, SizeOf(Tjpeg_decompress_struct));
end;

end.
